<resources>
    <string name="app_name">ShakeAlertLA</string>

    <string name="title_activity_maps">Map</string>
    <string-array name="screens">
        <item>Home</item>
        <item>Emergency</item>
        <item>Recovery</item>
        <item>Settings</item>
    </string-array>
    <string name="be_batter_prepared">GET PREPARED FOR AN EARTHQUAKE</string>
    <string name="get_your_kit_ready">ShakeAlertLA sends you notifications when a 4.5 or greater earthquake happens in Los Angeles County, often before you feel shaking. Learn how to get prepared.</string>
    <string name="prepare_for_an_earthquake">Prepare for an earthquake</string>
    <string name="understand_earthquake_alerts">Earthquake\n alert map</string>
    <string name="view_recent_earthquakes">View recent earthquakes</string>
    <string name="recover_from_an_earthquake">Recover from an earthquake</string>
    <string name="about_shakealertla">About ShakeAlertLA</string>
    <string name="about_shakealertla_info">About ShakeAlertLA</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="terms_conditions">Terms and conditions</string>
    <string name="plan">Plan</string>
    <string name="find_out_more_on_how_to_prepare">Find out more on how to prepare</string>
    <string name="www_earthquakecountry_org">www.earthquakecountry.org</string>
    <string name="make_a_plan">Make a plan</string>
    <string name="recommendations">Recommendations</string>
    <string name="notes">Notes</string>
    <string name="additional_notes">Additional Notes</string>
    <string name="completed">Completed</string>
    <string name="build_a_kit">Build a kit</string>
    <string name="built_a_kit_info">Build a kit at home, in your car, and at work. Keep at least one week\'s worth of food and medicine on hand for everyone in your family at your home. Rotate food, water, and medications to avoid expired items in your kit. Consider the needs of infants, seniors, and those with medical or disability needs. Here’s a <a href="https://www.ready.gov/build-a-kit">sample of supplies</a>.
    </string>
    <string name="under_the_bed">Look below to check off supplies for your kit\n\n<b>Under the bed: </b>Sturdy shoes tied to underside of the bed with flashlight in one shoe and extra batteries in the other\n\n<b>Some things to include in your kit:</b>\n(each item will have a checkbox to note completion)</string>
    <string name="secure_your_place">Secure your place</string>
    <string name="make_your_home_safer_to_minimize_injury_and_damage_during_earthquake">Make your home safer to minimize injury and damage during earthquake.</string>
    <string name="proactive">Protective action</string>
    <string name="protective_action">protective_action</string>
    <string name="how_early_warning_work">How does early warning work?</string>
    <string name="how_this_works">How this works</string>
    <string name="how_does_early_warning_work">how_does_early_warning_work</string>
    <string name="recent_earthquakes">Recent earthquakes</string>
    <string name="recent_earthquakes_desc">Magnitude 3 or greater shown</string>
    <string name="by_time">By time</string>
    <string name="by_magnitude">By magnitude</string>
    <string name="magnitude">Magnitude</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="built_a_kit">Build a kit</string>
    <string name="partners">Partners</string>
    <string name="desclaimer">Support</string>
    <string name="using_shakealertla">Using ShakeAlertLA</string>
    <string name="what_i_get_from_shakealertla">What am I going to get from ShakeAlertLA?</string>
    <string name="shakealert_info">ShakeAlert Info</string>
    <string name="partner_file">partner</string>
    <string name="disclamer_file">disclaimer</string>
    <string name="using_shake_alert_la_file">using_shake_alert_la</string>
    <string name="how_early_warning_work_file">how_does_early_warning_work</string>
    <string name="what_i_get_from_shakealertla_file">where_am_i_going_to_get_from_shakealert_la</string>
    <string name="terms_of_use_file">terms_of_use</string>
    <string name="when_shaking_stops">When shaking stops</string>
    <string name="find_a_shelter">Find a shelter</string>
    <string name="volunteer_to_help">Volunteer to help</string>
    <string name="access_disaster_services">Access disaster services</string>
    <string name="get_help">Get help</string>
    <string name="when_shaking_stops_file">when_shaking_stops</string>
    <string name="volunteer_to_help_file">volunteer_to_help</string>
    <string name="access_disaster_services_file">access_disaster_services</string>
    <string name="if_you_need_help">If you need help, your home is damaged, or your location is unsafe, go to a shelter. Open shelters for the City of Los Angeles are listed below. If this information is not clear, call 3–1–1 for shelter locations or other non-emergency information. If you do not live in the City of Los Angeles and need a shelter, contact your city government or listen to news reports for where to seek services.</string>
    <string name="general">General</string>
    <string name="change_language">Change Language</string>
    <string name="push_notification">Push notifications</string>
    <string name="receive_timely_notification_about_earthquakes_in_los_angeles">This app allows us to receive timely earthquake warning alerts in County of Los Angeles.</string>
    <string name="shakealertla">ShakeAlertLA</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="quake_map">Earthquake alert map</string>
    <string name="recovery">Recovery</string>
    <string name="settings">Settings</string>
    <string name="details">Details</string>
    <string name="quakemap">Earthquake alert map</string>
    <string name="quakemap_desc">Magnitude 4.5 or greater shown</string>
    <string name="mmi_is_below_4_0">below 4.0</string>
    <string name="mmi_is_greater_than_5_0">greater than 5.0</string>
    <string name="mmi_is_greater_than_4_0_and_less_then_5_0">4.0–4.9</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the \nTerms and Conditions</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="earthquake_earthquake">Earthquake! Earthquake!</string>
    <string name="earthquake_is_happening">An earthquake is happening, you may feel weak shaking at your location.</string>
    <string name="dismiss">DISMISS</string>
    <string name="view_on_map">Show on a map</string>
    <string name="header_a"><b>Welcome to ShakeAlertLA!</b></string>
    <string name="header_b"><b>Get prepared before shaking</b></string>
    <string name="header_c"><b>Works only in LA</b></string>
    <string name="header_d"><b>Be alert just before shaking</b></string>
    <string name="tour_a">\nThe ShakeAlert™ earthquake early warning system sends messages that an earthquake has been detected and may affect you.</string>
    <string name="tour_b">\nYou may receive the alert before, during, or after shaking. Take protective action as soon as you receive an alert or feel or hear an earthquake. Drop, cover, and hold on.</string>
    <string name="tour_c">\nThe early warning function of this app only works in Los Angeles County, California.
    \nTo get alerts this app does not need to be open. However, you must set the phone’s location services to always on for ShakeAlertLA.</string>
    <string name="tour_d">\n\tShakeAlert is NOT a prediction that an earthquake will occur. It signals that an earthquake has started and you may feel shaking.  This app is meant to help provide alerts for your safety. Use common sense to stay safe.</string>
    <string name="earth_quake_earth_quake_expect_severe_shaking">Expect severe shaking. Drop, cover, hold on. Protect yourself now!</string>
    <string name="last_refreshed">Last refreshed: </string>
    <string name="intensity">Intensity</string>
    <string name="click_for_details">Click for details</string>
    <string name="go_back">Go Back</string>
    <string name="phone_settings">Phone Settings</string>
    <string name="to_get_alerts_you">To get alerts you don’t have to have the app open, but you must set Location Services to "Always On".</string>
    <string name="get_emergency">Get emergency notifications by signing up for NotifyLA, the City of Los Angeles’ official notification system for messages
        during emergencies and disasters.
        Text READY to 888-777 or fill in your information on the site at <a href="https://emergency.lacity.org/notifyla">NotifyLA</a>.
\n\nTo help your neighborhood get prepared, learn about our Ready Your LA Neighborhood <a href="https://emergency.lacity.org/rylan">(RYLAN)</a> program.
</string>
    <string name="magnitude_dot">Magnitude:</string>
    <string name="loading">Loading...</string>
    <string name="location_settings">Location Settings</string>
    <string name="optimal_result">For optimal result, the \"Location Services\" should be \"Always On\". ShakeAlert calculates the expected shaking intensity based on the distance between your phone location and the epicenter. An alert will be sent if the pre-set threshold is met. When the last anonymous location is updated, previous location info is overwritten.</string>
    <string name="quick_demo_functionalities">For a quick demo on the sample alert and key functionalities</string>
    <string name="do_not_disturb_settings">Do Not Disturb Settings</string>
    <string name="do_not_disturb_settings_descriptin">1. Open your device\'s Settings app.\n2. Tap Apps &amp; notifications.\n3. Tap the ShakeAlert LA app. If you don\'t see it, tap See all apps or App info, and then tap the app.\n4. Tap App notifications.\nTurn on Override Do Not Disturb.\nNote: If you don’t see \"Override Do Not Disturb\", tap Additional settings in the app and then Notifications, then turn on Override Do Not Disturb.</string>
    <string-array name="recent_eq_tabs">
        <item>Recentearthquakes List</item>
        <item>Recentearthquakes Map</item>
    </string-array>
    <string-array name="shelter_tabs">
        <item>Shelters List</item>
        <item>Shelters Map</item>
    </string-array>
</resources>
