<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/home"
        android:title="@string/title_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_quakemap"
        android:icon="@mipmap/emergency"
        android:title="@string/quake_map"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_recovery"
        android:icon="@mipmap/recovery"
        android:title="@string/recovery"
        app:showAsAction="always" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@mipmap/settings"
        android:title="@string/settings"
        app:showAsAction="always" />
</menu>
