<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    tools:context=".UserInterface.Activities.RecentEarthquakesActivity">
<RelativeLayout
    android:id="@+id/info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="10dp"
    android:gravity="center"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="20dp">

    <TextView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magnitude_dot"
        android:contentDescription="@string/magnitude"
        android:focusable="true"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:drawablePadding="10dp"
        android:layout_marginEnd="5dp"/>
    <TextView
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@mipmap/green_pin"
        android:text="@string/mmi_is_below_4_0"
        android:contentDescription="@string/mmi_is_below_4_0"
        android:focusable="true"
        android:textColor="@color/black"
        android:layout_toEndOf="@+id/head"
        android:textSize="13sp"
        android:drawablePadding="5dp"
        android:layout_marginEnd="5dp"/>
    <TextView
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@mipmap/yellow_pin"
        android:text="@string/mmi_is_greater_than_4_0_and_less_then_5_0"
        android:contentDescription="@string/mmi_is_greater_than_4_0_and_less_then_5_0"
        android:focusable="true"
        android:layout_toEndOf="@+id/one"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:drawablePadding="5dp"
        android:layout_marginEnd="5dp"/>
    <TextView
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@mipmap/red_pin"
        android:layout_toEndOf="@+id/three"
        android:text="@string/mmi_is_greater_than_5_0"
        android:contentDescription="@string/mmi_is_greater_than_5_0"
        android:focusable="true"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:drawablePadding="5dp"/>
</RelativeLayout>
    <!--<LinearLayout-->
        <!--android:id="@+id/info2"-->
        <!--android:layout_below="@+id/info"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_marginStart="20dp"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:layout_marginEnd="10dp">-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:drawableStart="@mipmap/yellow_pin"-->
            <!--android:text="@string/mmi_is_greater_than_4_0_and_less_then_5_0"-->
            <!--android:contentDescription="@string/mmi_is_greater_than_4_0_and_less_then_5_0"-->
            <!--android:focusable="true"-->
            <!--android:textColor="@color/black"-->
            <!--android:textSize="15sp"-->
            <!--android:drawablePadding="10dp"/>-->
    <!--</LinearLayout>-->
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/pullToRefresh"
        android:layout_width="match_parent"
        android:layout_below="@+id/info"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/recentListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="10dp"
            android:divider="@color/transparent"
            android:padding="15dp"
            tools:listitem="@layout/recent_earthquakes_list_item"/>

    </android.support.v4.widget.SwipeRefreshLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:visibility="gone"
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        fab:menu_fab_size="normal"
        fab:menu_showShadow="true"
        fab:menu_shadowColor="@color/transparent"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="3dp"
        fab:menu_colorNormal="@color/white"
        fab:menu_colorPressed="@color/white"
        fab:menu_colorRipple="#99FFFFFF"
        fab:menu_animationDelayPerItem="50"
        fab:menu_icon="@mipmap/sort_btn"
        fab:menu_buttonSpacing="0dp"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_paddingTop="4dp"
        fab:menu_labels_paddingRight="8dp"
        fab:menu_labels_paddingBottom="4dp"
        fab:menu_labels_paddingLeft="8dp"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_textColor="#FFFFFF"
        fab:menu_labels_textSize="14sp"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_colorNormal="#333333"
        fab:menu_labels_colorPressed="#444444"
        fab:menu_labels_colorRipple="#66FFFFFF"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_position="left"
        fab:menu_openDirection="up"
        fab:menu_backgroundColor="@android:color/transparent">
        <!--fab:menu_fab_label="your_label_here"-->
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/byTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/by_time"
            fab:fab_size="mini"
            fab:fab_label="@string/by_time"
            fab:fab_colorNormal="@color/transparent"
            fab:fab_colorPressed="#37a3a0"
            fab:fab_colorRipple="#47d4d0"
            fab:fab_shadowColor="@color/transparent" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/byMagnitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/by_magnitude"
            fab:fab_size="mini"
            fab:fab_label="@string/by_magnitude"
            fab:fab_colorNormal="@color/transparent"
            fab:fab_colorPressed="#37a3a0"
            fab:fab_colorRipple="#47d4d0"
            fab:fab_shadowColor="@color/transparent"/>

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>